northern-cyprus.css
.carousel-wrapper {
    display: flex;
    justify-content: center;
}
.carousel {
    width: 80%;
    height: 600px;
    overflow: hidden;
    position: relative;
    border-radius: 3px;
}

.carousel:hover .controls {
    opacity: 1;
}

.carousel .controls {
    opacity: 0;
    display: flex;
    position: absolute;
    top: 50%;
    left: 0;
    justify-content: space-between;
    width: 100%;
    z-index: 99999;
    transition: all ease 0.5s;
}

.carousel .controls .control {
    margin: 0 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 30px;
    width: 30px;
    border-radius: 50%;
    background-color: rgba(255, 255, 255, 0.7);
    opacity: 0.5;
    transition: ease 0.3s;
    cursor: pointer;
}

.carousel .controls .control img{
    height: 15px;
    width: 15px;
}

.prev-slide {
    padding-right: 3px;
}

.next-slide {
    padding-left: 3px;
}


.carousel .controls .control:hover {
    opacity: 1;
}

.carousel .slides {
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    display: flex;
    width: 100%;
    transition: 1s ease-in-out all;
}

.carousel .slides .slide {
    min-width: 100%;
    min-height: 100%; 
    height: auto;
}

.text-wrapper span, h2 {
    color: #B49C73; 
}

p {
    color: white;
}

@media (max-width: 768px) {
    .carousel {
        width: 80%;
        height: auto;
        min-height: 200px; 
    }
    .carousel .controls {
        top: 45%;
    }
}

@media (min-width: 768px) and (max-width: 820px)  {
    .carousel {
        min-height: 450px; 
    }
}

